# aligNN

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run_new.sh
src/: CMakeLists.txt  function_test.cpp  main.cpp  main.h
src/interface/: CMakeLists.txt  interface.cpp  interface.h
src/io/: CMakeLists.txt  dna_parser.cpp  forPY.cpp  io.cpp  io.h
src/test/: CMakeLists.txt  test.cpp  test.h
